solved investigating the data

--- a/L1_Starter_Code.ipynb
+++ b/L1_Starter_Code.ipynb
@@ -185,11 +185,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('creation_date', datetime.datetime(2015, 1, 14, 0, 0)),\n",
+       "             ('completion_date', datetime.datetime(2015, 1, 16, 0, 0)),\n",
+       "             ('assigned_rating', 'UNGRADED'),\n",
+       "             ('account_key', '256'),\n",
+       "             ('lesson_key', '3176718735'),\n",
+       "             ('processing_state', 'EVALUATED')])"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Clean up the data types in the submissions table\n",
     "for submission in project_submissions:\n",
@@ -210,18 +224,138 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1640"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#####################################\n",
     "#                 2                 #\n",
     "#####################################\n",
     "\n",
     "## Find the total number of rows and the number of unique students (account keys)\n",
-    "## in each table."
+    "## in each table.\n",
+    "\n",
+    "len(enrollments)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1302"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_enrolled_students = set()\n",
+    "for enrollment in enrollments:\n",
+    "    unique_enrolled_students.add(enrollment['account_key'])\n",
+    "len(unique_enrolled_students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "136240"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(daily_engagement)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1237"
+      ]
+     },
+     "execution_count": 20,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_engagement_students = set()\n",
+    "for engagement_record in daily_engagement:\n",
+    "    unique_engagement_students.add(engagement_record['acct'])\n",
+    "len(unique_engagement_students)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3642"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(project_submissions)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "743"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "unique_project_students = set()\n",
+    "for submission_record in project_submissions:\n",
+    "    unique_project_students.add(submission_record['account_key'])\n",
+    "len(unique_project_students)"
    ]
   },
   {
